--- a/Backend/TemuFansWS/nbproject/private/private.properties
+++ b/Backend/TemuFansWS/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Leoncio\\AppData\\Roaming\\NetBeans\\22\\config\\GlassFishEE6\\Properties\\gfv3-593199096.properties
+deploy.ant.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\22\\config\\GlassFishEE6\\Properties\\gfv3-869376345.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/lab9/glassfish-7.0.18/glassfish7/glassfish/domains/domain1
-j2ee.server.home=C:/lab9/glassfish-7.0.18/glassfish7/glassfish
-j2ee.server.instance=[C:\\lab9\\glassfish-7.0.18\\glassfish7\\glassfish;C:\\lab9\\glassfish-7.0.18\\glassfish7\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
-j2ee.server.middleware=C:/lab9/glassfish-7.0.18/glassfish7
-user.properties.file=C:\\Users\\Leoncio\\AppData\\Roaming\\NetBeans\\22\\build.properties
+j2ee.server.domain=D:/yo/programacion 3/glassfish7/glassfish/domains/domain1
+j2ee.server.home=D:/yo/programacion 3/glassfish7/glassfish
+j2ee.server.instance=[D:\\yo\\programacion 3\\glassfish7\\glassfish;D:\\yo\\programacion 3\\glassfish7\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
+j2ee.server.middleware=D:/yo/programacion 3/glassfish7
+user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\22\\build.properties
